--- a/src/pages/UserSaver.css
+++ b/src/pages/UserSaver.css
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	padding: 1rem;
 	background-color: lightgray;
 }
